2006-09-06  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/tools/gimpcroptool.c
	* app/tools/gimpcropoptions.[ch]: remove "crop vs resize"
	option, as recommended in bug #353936.
	
2006-09-06  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/paint-funcs/scale-funcs.[ch]: apply patch from Geert
	Jordaens to improve Lanczos scaling, with coding style
	cleanups; partly fixes bug #167956.

2006-09-06  Sven Neumann  <sven@gimp.org>

	* app/actions/plug-in-commands.c (plug_in_run_cmd_callback)
	(plug_in_repeat_cmd_callback): also add the procedure to the
	history if it is called from the "Repeat" or "Re-Show" menus.

	* plug-ins/common/vpropagate.c: changed progress text.

2006-09-06  Sven Neumann  <sven@gimp.org>

	* plug-ins/pygimp/gimpfu.py: document the new menu registration syntax.

2006-09-06  Sven Neumann  <sven@gimp.org>

	* plug-ins/pygimp/gimpui.defs
	* plug-ins/pygimp/gimpui.override: wrap the new GimpHintBox widget.

	* plug-ins/pygimp/gimpfu.py: use it to display the blurb.

	* plug-ins/pygimp/plug-ins/py-slice.py: added missing verb in blurb.

2006-09-05  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/Makefile.am
	* libgimpwidgets/gimpwidgets.h
	* libgimpwidgets/gimphintbox.[ch]: added simple widget to display
	a user hint. Having this as a widget will allow us to change the
	look, perhaps even using style properties.

	* libgimpwidgets/gimpwidgets.def: added the new symbols.

	* app/dialogs/keyboard-shortcuts-dialog.c
	* plug-ins/common/colormap-remap.c
	* plug-ins/common/redeye.c: use the new widget instead of
	duplicating the code.

2006-09-05  Michael Natterer  <mitch@gimp.org>

	* app/actions/debug-actions.c
	* app/actions/debug-commands.[ch]
	* menus/toolbox-menu.xml.in: added "Dump Attached Data" menu item
	which prints the stuff that is attached to the gimp and
	user_context objects.

2006-09-05  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/redeye.c (dialog): use the wilber icon / label