@@ -74,34 +74,6 @@ gimp_rectangle_guide_get_type (void)
 }
 
 GType
-gimp_crop_mode_get_type (void)
-{
-  static const GEnumValue values[] =
-  {
-    { GIMP_CROP_MODE_CROP, "GIMP_CROP_MODE_CROP", "crop" },
-    { GIMP_CROP_MODE_RESIZE, "GIMP_CROP_MODE_RESIZE", "resize" },
-    { 0, NULL, NULL }
-  };
-
-  static const GimpEnumDesc descs[] =
-  {
-    { GIMP_CROP_MODE_CROP, N_("Crop"), NULL },
-    { GIMP_CROP_MODE_RESIZE, N_("Resize"), NULL },
-    { 0, NULL, NULL }
-  };
-
-  static GType type = 0;
-
-  if (! type)
-    {
-      type = g_enum_register_static ("GimpCropMode", values);
-      gimp_enum_set_value_descriptions (type, descs);
-    }
-
-  return type;
-}
-
-GType
 gimp_rect_select_mode_get_type (void)
 {
   static const GEnumValue values[] =
